@@ -40,6 +40,7 @@ import org.opentest4j.AssertionFailedError;
 
 import java.io.IOException;
 import java.net.InetAddress;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Base64;
 import java.util.List;
@@ -1404,12 +1405,9 @@ class MavenParserTest implements RewriteTest {
 
         private void expectMavenDownloadingException(final String activeProfile) {
             Executable fn = () -> rewriteRun(
-              recipeSpec -> {
-                  // I don't think this is having the effect I want:(
-                  recipeSpec
-                    .executionContext(MavenExecutionContextView.view(new InMemoryExecutionContext()))
-                    .parser(MavenParser.builder().activeProfiles(activeProfile));
-              },
+              recipeSpec -> recipeSpec
+                .executionContext(MavenExecutionContextView.view(new InMemoryExecutionContext()))
+                .parser(MavenParser.builder().activeProfiles(activeProfile)),
               mavenProject("c",
                 pomXml(
                   """
@@ -1523,7 +1521,7 @@ class MavenParserTest implements RewriteTest {
             var mavenCtx = MavenExecutionContextView.view(new InMemoryExecutionContext(t -> {
                 throw new RuntimeException(t);
             }));
-            var settings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+            var settings = MavenSettings.parse(Parser.Input.fromString(Path.of("settings.xml"),
               //language=xml
               """
                 <settings>
